ajustes na página login

--- a/login.html
+++ b/login.html
@@ -6,28 +6,33 @@
     <!-- Define a codificação de caracteres para UTF-8, que suporta uma ampla gama de caracteres -->
     <!-- Define a configuração de visualização inicial da página para o tamanho do dispositivo e escala inicial -->
     <title>Login</title>
+    <!-- Define o título da página como "Nossa Equipe" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
- rel="stylesheet">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
- crossorigin="anonymous" referrerpolicy="no-referrer" />
- <link rel="stylesheet" href="./css/login.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Preconecta-se ao serviço do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet">
+    <!-- Importa a fonte Poppins do Google Fonts com diferentes pesos e estilos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- Importa o arquivo CSS do Font Awesome para utilizar ícones -->
+    <link rel="stylesheet" href="./css/login.css">
+    <!-- Importa um arquivo CSS local chamado equipe.css -->
 </head>
 <body>
+   
     <header>
-<<<<<<<<< Temporary merge branch 1
+        <!-- Início do cabeçalho -->
         <div class="container-navbar">
+            <!-- Um contêiner para a barra de navegação -->
             <div class="logo">
+                <!-- Logotipo da página -->
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
+                <!-- Imagem do logotipo com um texto alternativo -->
+                <h2>Cozinha20</h2>
             </div>
             <button class="hamburger">&#9776;</button>
-=========
-        <div class="container">
-            <div class="logo">
-                <img src="./img/slide/logo1.png" alt="Logo cozinha20">
-            </div>
->>>>>>>>> Temporary merge branch 2
+            <!-- Um botão para a versão mobile do menu -->
             <nav class="navbar">
                 <!-- Navegação principal -->
                 <ul class="nav-menu">
@@ -39,11 +44,10 @@
                     <li class="nav-item"><a href="receitas.html">Receitas</a></li>
                     <!-- Item do menu "Receitas" -->
                     <li class="nav-item"><a href="loja.html">Loja</a></li>
-<<<<<<<<< Temporary merge branch 1
-                    <li class="nav-item active"><a href="login.html">Entrar</a></li>
-=========
-                    <li class="nav-item"><a href="login.html">Entrar</a></li>
->>>>>>>>> Temporary merge branch 2
+                    <!-- Item do menu "Loja" -->
+                    <li class="nav-item login-item"><a href="login.html" class="login-btn">Entrar</a></li>
+
+                    <!-- Item do menu "Entrar" -->
                 </ul>
             </nav>
         </div>
@@ -89,29 +93,16 @@
 
             <!-- Links para redes sociais -->
             <div id="footer_social_media">
-<<<<<<<<< Temporary merge branch 1
                 <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="https://www.facebook.com/" target="_blank" class="footer-link" id="facebook">
+                <a href="https://www.facebook.com/" target="_blank"  class="footer-link" id="facebook">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
                 <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
                     <i class="fa-brands fa-whatsapp"></i>
-=========
-                <a href="#" class="footer-link" id="instagram">
-                    <i class="fa-brands fa-instagram">I</i>
-                </a>
-
-                <a href="#" class="footer-link" id="facebook">
-                    <i class="fa-brands fa-facebook-f">F</i>
-                </a>
-
-                <a href="#" class="footer-link" id="whatsapp">
-                    <i class="fa-brands fa-whatsapp">W</i>
->>>>>>>>> Temporary merge branch 2
                 </a>
             </div>
         </div>
@@ -124,23 +115,17 @@
             </li>
             <!-- Item da lista -->
             <li>
-<<<<<<<<< Temporary merge branch 1
                 <a href="https://web.whatsapp.com/" target="_blank" class="footer-link">whatsapp</a>
+                 <!-- Link para o WhatsApp -->
             </li>
+
             <li>
                 <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+               <!-- Link para o Facebook --> 
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
-=========
-                <a href="#" class="footer-link">whatsapp</a>
-            </li>
-            <li>
-                <a href="#" class="footer-link">Facebook</a>
-            </li>
-            <li>
-                <a href="#" class="footer-link">Instagram</a>
->>>>>>>>> Temporary merge branch 2
+                <!-- Link para o Instagram -->
             </li>
         </ul>
 
@@ -153,43 +138,44 @@
             </li>
             <!-- Item da lista -->
             <li>
-<<<<<<<<< Temporary merge branch 1
                 <a href="receitas.html" class="footer-link">Receitas</a>
+               <!-- Link para a página de receitas --> 
             </li>
+             <!-- Item da lista -->
             <li>
                 <a href="loja.html" class="footer-link">Loja</a>
+              <!-- Link para a página da loja -->  
             </li>
+             <!-- Item da lista -->
             <li>
                 <a href="cadastro.html" class="footer-link">Trabalhe conosco</a>
-=========
-                <a href="#" class="footer-link">Receitas</a>
+                <!-- Link para a página de cadastro para trabalhar -->
             </li>
-            <li>
-                <a href="#" class="footer-link">Loja</a>
-            </li>
-            <li>
-                <a href="#" class="footer-link">Diversos</a>
->>>>>>>>> Temporary merge branch 2
-            </li>
+           <!-- Item da lista --> 
         </ul>
         <!-- Fim da lista de serviços -->
 
-        <div id="footer_subscribe">
-<<<<<<<<< Temporary merge branch 1
-            <h3>inscreva-se!</h3>
-=========
-            <h3>Subscribe</h3>
->>>>>>>>> Temporary merge branch 2
-
-            <p>
-                Deixe seu e-mail para receber atualizações.
-            </p>
-
-            <div id="input_group">
-                <input type="email" id="email">
-                <button>
-                    <i class="fa-regular fa-envelope"></i>
-                </button>
+              <!-- Formulário de inscrição -->
+              <div id="footer_subscribe">
+                <h3>Inscreva-se!</h3>
+            <!-- Título -->
+    
+                <p>
+                    Deixe seu e-mail para receber atualizações.
+                </p>
+            <!-- Descrição -->
+                <div id="input_group">
+                    <!-- Grupo de entrada -->
+                    <label for="email-footer"></label>
+                     <!-- Rótulo para o campo de e-mail -->
+                    <input type="email" id="email-footer" name="email-footer" required>
+                    <!-- Campo de e-mail -->
+                    <button>
+                        <i class="fas fa-envelope"></i>
+                    </button>
+                    <!-- Botão de envio -->
+                </div>
+               <!-- Fim do grupo de entrada --> 
             </div>
          <!-- Fim do formulário de inscrição --> 
     </div>
