retirar o título cozinha 20 do header

--- a/equipe.html
+++ b/equipe.html
@@ -28,7 +28,7 @@
                 <!-- Logotipo da página -->
                 <img src="./img/slide/logo1.png" alt="Logo cozinha20">
                 <!-- Imagem do logotipo com um texto alternativo -->
-                <h2>Cozinha20</h2>
+                <!-- <h2>Cozinha20</h2> -->
             </div>
             <button class="hamburger">&#9776;</button>
             <!-- Um botão para a versão mobile do menu -->
