criando links no footer

--- a/login.html
+++ b/login.html
@@ -93,15 +93,15 @@
 
             <!-- Links para redes sociais -->
             <div id="footer_social_media">
-                <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
+                <a href="https://www.instagram.com/marleyparanhos/" target="_blank" class="footer-link" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="https://www.facebook.com/" target="_blank"  class="footer-link" id="facebook">
+                <a href="https://www.facebook.com/marley.paranhos" target="_blank"  class="footer-link" id="facebook">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
-                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
+                <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link" id="whatsapp">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </div>
@@ -115,16 +115,16 @@
             </li>
             <!-- Item da lista -->
             <li>
-                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link">whatsapp</a>
+                <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link">whatsapp</a>
                  <!-- Link para o WhatsApp -->
             </li>
 
             <li>
-                <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                <a href="https://www.facebook.com/marley.paranhos" target="_blank" class="footer-link">Facebook</a>
                <!-- Link para o Facebook --> 
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                <a href="https://www.instagram.com/marleyparanhos/" target="_blank" class="footer-link">Instagram</a>
                 <!-- Link para o Instagram -->
             </li>
         </ul>
@@ -155,29 +155,29 @@
         </ul>
         <!-- Fim da lista de serviços -->
 
-              <!-- Formulário de inscrição -->
-              <div id="footer_subscribe">
-                <h3>Inscreva-se!</h3>
-            <!-- Título -->
-    
-                <p>
-                    Deixe seu e-mail para receber atualizações.
-                </p>
-            <!-- Descrição -->
-                <div id="input_group">
-                    <!-- Grupo de entrada -->
-                    <label for="email-footer"></label>
-                     <!-- Rótulo para o campo de e-mail -->
-                    <input type="email" id="email-footer" name="email-footer" required>
-                    <!-- Campo de e-mail -->
-                    <button>
-                        <i class="fas fa-envelope"></i>
-                    </button>
-                    <!-- Botão de envio -->
-                </div>
-               <!-- Fim do grupo de entrada --> 
+        <!-- Formulário de inscrição -->
+        <div id="footer_subscribe">
+            <h3>Inscreva-se!</h3>
+        <!-- Título -->
+
+            <p>
+                Deixe seu e-mail para receber atualizações.
+            </p>
+        <!-- Descrição -->
+            <div id="input_group">
+                <!-- Grupo de entrada -->
+                <label for="email"></label>
+                 <!-- Rótulo para o campo de e-mail -->
+                <input type="email" id="email" name="email" required>
+                <!-- Campo de e-mail -->
+                <button type="submit">
+                    <i class="fas fa-envelope"></i>
+                </button>
+                <!-- Botão de envio -->
             </div>
-         <!-- Fim do formulário de inscrição --> 
+           <!-- Fim do grupo de entrada --> 
+        </div>
+     <!-- Fim do formulário de inscrição --> 
     </div>
 <!-- Fim do conteúdo do rodapé -->
 
@@ -186,7 +186,7 @@
         @2024 Direitos reservados ao grupo3
     </div>
       <!-- Fim dos direitos autorais -->
-</footer> 
+</footer>  
 
 <button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>
 <!-- Botão para voltar ao topo -->
