--- a/cadastro.html
+++ b/cadastro.html
@@ -126,15 +126,15 @@
 
             <!-- Links para redes sociais -->
             <div id="footer_social_media">
-                <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
+                <a href="https://www.instagram.com/marleyparanhos/" target="_blank" class="footer-link" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="https://www.facebook.com/" target="_blank"  class="footer-link" id="facebook">
+                <a href="https://www.facebook.com/marley.paranhos" target="_blank"  class="footer-link" id="facebook">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
-                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
+                <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link" id="whatsapp">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </div>
@@ -148,16 +148,16 @@
             </li>
             <!-- Item da lista -->
             <li>
-                <a href="https://web.whatsapp.com/" target="_blank" class="footer-link">whatsapp</a>
+                <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link">whatsapp</a>
                  <!-- Link para o WhatsApp -->
             </li>
 
             <li>
-                <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                <a href="https://www.facebook.com/marley.paranhos" target="_blank" class="footer-link">Facebook</a>
                <!-- Link para o Facebook --> 
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                <a href="https://www.instagram.com/marleyparanhos/" target="_blank" class="footer-link">Instagram</a>
                 <!-- Link para o Instagram -->
             </li>
         </ul>
@@ -219,7 +219,7 @@
         @2024 Direitos reservados ao grupo3
     </div>
       <!-- Fim dos direitos autorais -->
-</footer> 
+</footer>  
 
 <button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>
 <!-- Botão para voltar ao topo -->
