--- a/receitas.html
+++ b/receitas.html
@@ -594,108 +594,108 @@
 </main>   
 
 <footer>
-      <!-- Conteúdo do rodapé -->
-      <div id="footer_content">
-          <!-- Informações sobre "Cozinha20" -->
-          <div id="footer_contacts">
-              <h1>Cozinha20</h1>
-              <p>As melhores receitas na sua mão.</p>
-  
-              <!-- Links para redes sociais -->
-              <div id="footer_social_media">
-                  <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
-                      <i class="fa-brands fa-instagram"></i>
-                  </a>
-  
-                  <a href="https://www.facebook.com/" target="_blank"  class="footer-link" id="facebook">
-                      <i class="fa-brands fa-facebook-f"></i>
-                  </a>
-  
-                  <a href="https://web.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
-                      <i class="fa-brands fa-whatsapp"></i>
-                  </a>
-              </div>
-          </div>
-          
-          <!-- Lista de links de contato -->
-          <ul class="footer-list">
-              <li>
-                  <h3>Contatos</h3>
-                   <!-- Título da lista -->
-              </li>
-              <!-- Item da lista -->
-              <li>
-                  <a href="https://web.whatsapp.com/" target="_blank" class="footer-link">whatsapp</a>
-                   <!-- Link para o WhatsApp -->
-              </li>
+    <!-- Conteúdo do rodapé -->
+    <div id="footer_content">
+        <!-- Informações sobre "Cozinha20" -->
+        <div id="footer_contacts">
+            <h1>Cozinha20</h1>
+            <p>As melhores receitas na sua mão.</p>
 
-              <li>
-                  <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
-                 <!-- Link para o Facebook --> 
-              </li>
-              <li>
-                  <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
-                  <!-- Link para o Instagram -->
-              </li>
-          </ul>
-  
-          <!-- Lista de serviços -->
-          <ul class="footer-list">
-              <!-- Lista de links -->
-              <li>
-                  <h3>Serviços</h3>
-                 <!-- Título da lista --> 
-              </li>
-              <!-- Item da lista -->
-              <li>
-                  <a href="receitas.html" class="footer-link">Receitas</a>
-                 <!-- Link para a página de receitas --> 
-              </li>
-               <!-- Item da lista -->
-              <li>
-                  <a href="loja.html" class="footer-link">Loja</a>
-                <!-- Link para a página da loja -->  
-              </li>
-               <!-- Item da lista -->
-              <li>
-                  <a href="cadastro.html" class="footer-link">Trabalhe conosco</a>
-                  <!-- Link para a página de cadastro para trabalhar -->
-              </li>
-             <!-- Item da lista --> 
-          </ul>
-          <!-- Fim da lista de serviços -->
+            <!-- Links para redes sociais -->
+            <div id="footer_social_media">
+                <a href="https://www.instagram.com/marleyparanhos/" target="_blank" class="footer-link" id="instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
 
-          <!-- Formulário de inscrição -->
-          <div id="footer_subscribe">
-              <h3>Inscreva-se!</h3>
-          <!-- Título -->
+                <a href="https://www.facebook.com/marley.paranhos" target="_blank"  class="footer-link" id="facebook">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
 
-              <p>
-                  Deixe seu e-mail para receber atualizações.
-              </p>
-          <!-- Descrição -->
-              <div id="input_group">
-                  <!-- Grupo de entrada -->
-                  <label for="email"></label>
-                   <!-- Rótulo para o campo de e-mail -->
-                  <input type="email" id="email" name="email" required>
-                  <!-- Campo de e-mail -->
-                  <button type="submit">
-                      <i class="fas fa-envelope"></i>
-                  </button>
-                  <!-- Botão de envio -->
-              </div>
-             <!-- Fim do grupo de entrada --> 
-          </div>
-       <!-- Fim do formulário de inscrição --> 
-      </div>
-  <!-- Fim do conteúdo do rodapé -->
+                <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link" id="whatsapp">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+            </div>
+        </div>
+        
+        <!-- Lista de links de contato -->
+        <ul class="footer-list">
+            <li>
+                <h3>Contatos</h3>
+                 <!-- Título da lista -->
+            </li>
+            <!-- Item da lista -->
+            <li>
+                <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link">whatsapp</a>
+                 <!-- Link para o WhatsApp -->
+            </li>
 
-      <!-- Direitos autorais -->
-      <div id="footer_copyright">
-          @2024 Direitos reservados ao grupo3
-      </div>
-        <!-- Fim dos direitos autorais -->
+            <li>
+                <a href="https://www.facebook.com/marley.paranhos" target="_blank" class="footer-link">Facebook</a>
+               <!-- Link para o Facebook --> 
+            </li>
+            <li>
+                <a href="https://www.instagram.com/marleyparanhos/" target="_blank" class="footer-link">Instagram</a>
+                <!-- Link para o Instagram -->
+            </li>
+        </ul>
+
+        <!-- Lista de serviços -->
+        <ul class="footer-list">
+            <!-- Lista de links -->
+            <li>
+                <h3>Serviços</h3>
+               <!-- Título da lista --> 
+            </li>
+            <!-- Item da lista -->
+            <li>
+                <a href="receitas.html" class="footer-link">Receitas</a>
+               <!-- Link para a página de receitas --> 
+            </li>
+             <!-- Item da lista -->
+            <li>
+                <a href="loja.html" class="footer-link">Loja</a>
+              <!-- Link para a página da loja -->  
+            </li>
+             <!-- Item da lista -->
+            <li>
+                <a href="cadastro.html" class="footer-link">Trabalhe conosco</a>
+                <!-- Link para a página de cadastro para trabalhar -->
+            </li>
+           <!-- Item da lista --> 
+        </ul>
+        <!-- Fim da lista de serviços -->
+
+        <!-- Formulário de inscrição -->
+        <div id="footer_subscribe">
+            <h3>Inscreva-se!</h3>
+        <!-- Título -->
+
+            <p>
+                Deixe seu e-mail para receber atualizações.
+            </p>
+        <!-- Descrição -->
+            <div id="input_group">
+                <!-- Grupo de entrada -->
+                <label for="email"></label>
+                 <!-- Rótulo para o campo de e-mail -->
+                <input type="email" id="email" name="email" required>
+                <!-- Campo de e-mail -->
+                <button type="submit">
+                    <i class="fas fa-envelope"></i>
+                </button>
+                <!-- Botão de envio -->
+            </div>
+           <!-- Fim do grupo de entrada --> 
+        </div>
+     <!-- Fim do formulário de inscrição --> 
+    </div>
+<!-- Fim do conteúdo do rodapé -->
+
+    <!-- Direitos autorais -->
+    <div id="footer_copyright">
+        @2024 Direitos reservados ao grupo3
+    </div>
+      <!-- Fim dos direitos autorais -->
 </footer> 
   
     <button onclick="scrollToTop()" id="btnTopo" title="Voltar ao Topo"></button>
