criando links no footer

--- a/equipe.html
+++ b/equipe.html
@@ -151,7 +151,7 @@
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
     
-                    <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link" id="whatsapp">
+                    <a href="https://api.whatsapp.com/send?phone=5531980139754&text=Ol%C3%A1,%20fiz%20uma%20visita%20ao%20seu%20portf%C3%B3lio." target="_blank" class="footer-link" id="whatsapp">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </div>
@@ -165,7 +165,7 @@
                 </li>
                 <!-- Item da lista -->
                 <li>
-                    <a href="https://wa.me/+5531980139754" target="_blank" class="footer-link">whatsapp</a>
+                    <a href="https://api.whatsapp.com/send?phone=5531980139754&text=Ol%C3%A1,%20fiz%20uma%20visita%20ao%20seu%20portf%C3%B3lio." target="_blank" class="footer-link">whatsapp</a>
                      <!-- Link para o WhatsApp -->
                 </li>
     
