ajuste na página loja

--- a/loja.html
+++ b/loja.html
@@ -67,7 +67,7 @@
             </div>
             <div class="product">
                 <img src="./img/livros/16 delícias á mesa.png" alt="Capa do Livro">
-                <h2>Delicías á mesa</h2>
+                <h2>Delicías a mesa</h2>
                 <p> Descubra uma variedade de pratos irresistíveis neste livro que combina técnicas tradicionais, garantindo momentos memoráveis à mesa no seu dia a dia.</p>
                 <p>R$75,00</p>
                 <input type="number" id="quantity2" placeholder="Quantidade">
